##Text encoding: utf-8

2007-04-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.cc: use "u" as the atomic mass unit.

2007-04-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/table/family.glade: fixed families names.

2007-03-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: removed *_DISABLE_DEPRECATED.
	* docs/help/table/C/gchemtable.xml: fixed some typos.

2007-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.7.91).

2007-03-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/window.cc: updated copyright in about box.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2007-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/main.cc: calls gtk_gl_init.
	* programs/crystal/main.cc: ditto.

2007-02-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/3d/C/gchem3d-viewer-unstable.xml: renamed.
	* docs/help/3d/C/gchem3d-viewer.xml: new name.
	* docs/help/3d/Makefile.am: removed unstable.
	* docs/help/calc/C/gchemcalc-unstable.xml: renamed.
	* docs/help/calc/C/gchemcalc.xml: new name.
	* docs/help/calc/Makefile.am: removed unstable.
	* docs/help/crystal/C/gcrystal-unstable.xml: renamed.
	* docs/help/crystal/C/gcrystal.xml: new name.
	* docs/help/crystal/Makefile.am: removed unstable.
	* docs/help/table/C/gchemtable-unstable.xml: renamed.
	* docs/help/table/C/gchemtable.xml: new name.
	* docs/help/table/Makefile.am: removed unstable.

2007-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: remove unstable stuff.
	* configure.ac: ditto and changed version to 0.7.90.
	* database/Makefile.am: remove unstable stuff.
	* gcu-unstable.pc.in: ditto.
	* gcu.pc.in: ditto.
	* gcu/Makefile.am: ditto.
	* glade/Makefile.am: ditto.
	* glade/crystal/Makefile.am: ditto.
	* glade/table/Makefile.am: ditto.
	* mozilla-plugin/Makefile.am: ditto.
	* po/POTFILES.in: ditto.