@@ -1,5 +1,11 @@
 ##Text encoding: utf-8
 
+2007-04-06  Jean Bréfort  <jean.brefort@normalesup.org>
+	* gcu/element.cc: fixed typo.
+	* gcu/object.cc: add x and y parameters to
+	BuildContextualMenu.
+	* gcu/object.h: ditto.
+
 2007-04-01  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gcu/element.cc: use "u" as the atomic mass unit.
 
